# geodetic_library

./: .gitignore  CMakeLists.txt  README.md
.cmake/: build_info.h.template
.github/workflows/: cmake-build.yml
include/: .gitignore  testGeolib.h  testUtil.h
include/geolib/: Constants.h  ErrorCodes.h  Geolib.h  Shape.h  Util.h  cppmanifest.h
include/no_include/: ComplexBoundary.h
include/test/: testUtil.h
src/c/: Arc.cxx  Boundary.cxx  CMakeLists.txt  ComplexBoundary.cxx  Configuration.cxx  Constructions.cxx  Display.cc  ErrorCodes.cc  Geodesic.cc  Intersections.cxx  LLPoint.cc  Locus.cxx  NearBoundary.cxx  Projections.cxx  Sphere.cxx  Spiral.cxx  Util.cc  Vector.cxx  VincentyAlgorithms.cc  insideOutside.cxx
src/c/no_include/: KarneyAlgorithms.cxx  NGSVincentyAlgorithms.cxx
src/example/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt  testGeolib.cc  testUtil.cc
test/testArc/src/: testArc.cc
test/testBoundary/src/: testBoundary.cc
test/testGeodesic/src/: testGeodesic.cc
test/testLLPoint/src/: testLLPoint.cc
test/testLocus/src/: testLocus.cc
test/testShape/src/: testShape.cc
test/testSpiral/src/: testSpiral.cc
test/testUtil/src/: testUtilityFunctions.cc
test/testVector/src/: testVector.cc
